testdata/invalid/ringbuf_double_submit_in_loop.hzn
package invalid

type Event struct {
    pid u32
}

map Events ringbuf[Event]

@tracepoint("sched:sched_process_exec")
func Bad(ctx tracepoint.Exec) i32 {
    event := Events.reserve()
    if event == nil { return 0 }
    for i := 0; i < 4; i++ {
        Events.submit(event)
    }
    return 0
}
